[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/Mainscene.gd" type="Script" id=1]
[ext_resource path="res://scene/wheel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scene/color spawner.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/PlatNomor-eZ2dm.otf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/score.gd" type="Script" id=5]
[ext_resource path="res://icons/home.png" type="Texture" id=6]
[ext_resource path="res://icons/replay.png" type="Texture" id=7]
[ext_resource path="res://scene/highscore2.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/pausebutton.png" type="Texture" id=9]
[ext_resource path="res://scene/pausebutton.gd" type="Script" id=10]
[ext_resource path="res://scene/parallax background.tscn" type="PackedScene" id=12]
[ext_resource path="res://icons/fast_forward.png" type="Texture" id=13]
[ext_resource path="res://scene/transform_spawner.tscn" type="PackedScene" id=14]
[ext_resource path="res://scene/rain.tscn" type="PackedScene" id=15]
[ext_resource path="res://images/options bar.png" type="Texture" id=17]
[ext_resource path="res://fonts/dealerplate california.ttf" type="DynamicFontData" id=18]

[sub_resource type="DynamicFont" id=1]
size = 100
use_mipmaps = true
use_filter = true
font_data = ExtResource( 18 )

[sub_resource type="Animation" id=2]
resource_name = "New Anim"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 0.5, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4, 0.8 ),
"transitions": PoolRealArray( 0.5, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 393.899, 63.8072 ), Vector2( 273.899, 47.8072 ), Vector2( 393.899, 63.8072 ) ]
}

[sub_resource type="StreamTexture" id=3]
flags = 6
load_path = "res://.import/wheel color.png-2f76b9e82f56f04547531211817c85ec.stex"

[sub_resource type="DynamicFont" id=4]
size = 200
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 100
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("gameover:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gameover:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("gameover/retry:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("gameover/Label:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("gameover/Label:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("gameover/Label:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 287, 449 ), Vector2( 143.673, 196.642 ), Vector2( 182.661, 252.687 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("gameover/Label:rect_scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 0.5, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath("gameover:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("gameover:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("gameover/retry:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("gameover/Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("gameover/home:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]

[sub_resource type="Animation" id=9]
resource_name = "flash"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("flash:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("flash:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "shake"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 2, 0.5, 2, 0.5 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -40, 0 ), Vector2( 40, 0 ), Vector2( 0, 0 ) ]
}

[node name="Mainscene" type="Node2D"]
script = ExtResource( 1 )

[node name="wheel" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 688 )

[node name="color spawner" parent="." instance=ExtResource( 3 )]

[node name="score" type="Label" parent="."]
modulate = Color( 0.952941, 0.952941, 0.952941, 1 )
show_behind_parent = true
margin_left = 393.899
margin_top = 63.8072
margin_right = 808.899
margin_bottom = 263.807
grow_horizontal = 0
grow_vertical = 2
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.996078, 0.988235, 0.988235, 1 )
text = "0/100"
align = 2
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer2" type="AnimationPlayer" parent="score"]
playback_speed = 1.5
"anims/New Anim" = SubResource( 2 )

[node name="gameover" type="Popup" parent="."]
margin_left = -18.41
margin_top = 77.7924
margin_right = 21.59
margin_bottom = 117.792
__meta__ = {
"_edit_use_anchors_": false
}

[node name="retry" type="Button" parent="gameover"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 317.644
margin_top = 787.291
margin_right = 585.644
margin_bottom = 1049.29
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="gameover"]
modulate = Color( 0, 0.2, 0.478431, 0.517647 )
position = Vector2( 365.004, 662.995 )
scale = Vector2( 2, 6 )
z_index = -1
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="home" type="Button" parent="gameover"]
margin_left = 151.281
margin_top = 787.291
margin_right = 419.281
margin_bottom = 1049.29
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="gameover"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 287.0
margin_top = 449.0
margin_right = 683.0
margin_bottom = 1055.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 4 )
text = "Game
over
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="highscore2" parent="gameover" instance=ExtResource( 8 )]
margin_left = 156.968
margin_top = 880.0
margin_right = 604.968
margin_bottom = 1301.0
grow_horizontal = 2
grow_vertical = 2
text = "highscore:50"
align = 1
valign = 1

[node name="continue" type="Button" parent="gameover"]
margin_left = 485.644
margin_top = 787.291
margin_right = 753.644
margin_bottom = 1049.29
rect_scale = Vector2( 0.5, 0.5 )
icon = ExtResource( 13 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause" type="Popup" parent="."]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="pause"]
modulate = Color( 0, 0.2, 0.478431, 0.517647 )
position = Vector2( 365.004, 662.995 )
scale = Vector2( 2, 6 )
z_index = -1
texture = SubResource( 3 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Label" type="Label" parent="pause"]
margin_left = 123.82
margin_top = 121.858
margin_right = 595.82
margin_bottom = 727.858
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 5 )
text = "PAUSE
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 6 )
anims/congrats = SubResource( 7 )

[node name="intro" type="AnimationPlayer" parent="."]
anims/enter = SubResource( 8 )

[node name="pausebutton" type="TouchScreenButton" parent="."]
pause_mode = 2
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 56, 55 )
scale = Vector2( 0.4, 0.4 )
normal = ExtResource( 9 )
script = ExtResource( 10 )

[node name="transform_spawner" parent="." instance=ExtResource( 14 )]

[node name="flash" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 352.897, 615.12 )
scale = Vector2( 2.78481, 4.70784 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_lock_": true
}

[node name="flash_anim" type="AnimationPlayer" parent="."]
playback_speed = 10.0
anims/flash = SubResource( 9 )

[node name="parallax background2" parent="." instance=ExtResource( 12 )]

[node name="rain" parent="." instance=ExtResource( 15 )]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="camerashake" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/shake = SubResource( 10 )
[connection signal="pressed" from="gameover/retry" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="gameover/home" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="gameover/continue" to="." method="_on_continue_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="pausebutton" to="." method="_on_pausebutton_pressed"]
[connection signal="pressed" from="pausebutton" to="pausebutton" method="_on_pausebutton_pressed"]
